--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "firebase": "^10.12.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
@@ -23,6 +24,7 @@
     "react-tabs": "^6.0.2",
     "react-tooltip": "^5.26.4",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.11.0",
     "swiper": "^11.1.3"
   },
   "devDependencies": {
