--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.39.0",
     "axios": "^1.7.2",
     "firebase": "^10.12.1",
     "localforage": "^1.10.0",
